# evnt

./: .gitmodules  CMakeLists.txt  README.md  cmake_quick_install.cmake
example/: CMakeLists.txt  evnt_example.cpp
example/basic_cmake_project/: CMakeLists.txt
include/evnt/: async_event_queue.hpp  event_box.hpp  event_dispatcher.hpp  event_info.hpp  event_listener.hpp  event_listener.inl  event_manager.hpp  evnt.hpp  signal.hpp
src/: async_event_queue.cpp  event_box.cpp  event_dispatcher.cpp  event_manager.cpp  evnt.cpp
test/: CMakeLists.txt  event_box_tests.cpp  evnt_tests.cpp
